--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^7.3.1",
     "axios": "^1.11.0",
     "next": "15.5.2",
     "react": "19.1.0",
